Added new frame ancestor directives

--- a/webapp/test-frame/index.html
+++ b/webapp/test-frame/index.html
@@ -8,7 +8,7 @@
 <h2>IFrame NePyNE-UI</h2>
 
 <!-- IFrame element -->
-<iframe src="http://localhost:8081/geppetto" width="1200" height="1200">
+<iframe src="http://localhost:8081" width="1200" height="1200">
     <!-- Alternative content for browsers that do not support iframes -->
     <p>Your browser does not support iframes.</p>
 </iframe>
